force-app/main/default/objects/npe4__Relationship__c/fields/msf_CiviExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_CiviExternalId__c</fullName>
    <externalId>true</externalId>
    <label>msf_CiviExternalId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>