force-app/main/default/objects/npe4__Relationship__c/fields/npe4__Status__c.field-meta.xml
<CustomField>
    <fullName>npe4__Status__c</fullName>
    <description>Status of the Relationship.</description>
    <inlineHelpText>Estado de la relación</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>