force-app/main/default/objects/npe4__Relationship__c/fields/npsp__Related_Opportunity_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>npsp__Related_Opportunity_Contact_Role__c</fullName>
    <description>When you create an Opportunity for the Contact in this Relationship, NPSP assigns this Opportunity Contact Role to the Related Contact.</description>
    <inlineHelpText>Cuando crea una oportunidad para el contacto en esta relación, NPSP asigna esta función de contacto de oportunidad al contacto relacionado.</inlineHelpText>
    <label>Related Opportunity Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Tribute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>