force-app/main/default/objects/npe4__Relationship__c/validationRules/MSF_MainContact_Restiction.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_MainContact_Restiction</fullName>
    <active>true</active>
    <description>An organizational contact can not be duplicated from an individual contact and vice versa.</description>
    <errorConditionFormula>ISPICKVAL( npe4__Type__c , &apos;Main contact of another company&apos;) &amp;&amp;
( 
  (npe4__Contact__r.RecordType.DeveloperName = &apos;Organization_Contact&apos; &amp;&amp;  npe4__RelatedContact__r.RecordType.DeveloperName &lt;&gt; &apos;Organization&apos;) ||
  (npe4__Contact__r.RecordType.DeveloperName = &apos;Organization&apos; &amp;&amp;  npe4__RelatedContact__r.RecordType.DeveloperName &lt;&gt; &apos;Organization_Contact&apos;) 
)</errorConditionFormula>
    <errorDisplayField>npe4__Type__c</errorDisplayField>
    <errorMessage>Este tipo de relación no esta permitido entre los tipos de los contactos seleccionados.</errorMessage>
</ValidationRule>